# SPDX-FileCopyrightText: 2020 Nextcloud GmbH and Nextcloud contributors
# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "notify_push"
version = "0.1.0" # this version number is unused, the version number for the binary will be extracted from the appinfo/info.xml during build
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2021"
rust-version = "1.85.0"

[dependencies]
redis = { version = "0.31.0", default-features = false, features = ["tokio-comp", "aio", "cluster", "cluster-async", "keep-alive", "tls-rustls", "tokio-rustls-comp", "tls-rustls-webpki-roots", "tls-rustls-insecure"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
warp = { version = "0.3.7", features = ["tls"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
futures = "0.3.31"
log = "0.4.27"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "any", "mysql", "sqlite", "postgres"] }
dotenvy = "0.15.7"
dashmap = "6.1.0"
once_cell = "1.21.3"
miette = { version = "7.6.0", features = ["fancy"] }
smallvec = { version = "1.15.1", features = ["serde"] }
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots", "json"] }
warp-real-ip = "0.2.0"
parse-display = "0.10.0"
rand = { version = "0.8.5", features = ["small_rng"] }
ahash = "0.8.12"
flexi_logger = { version = "0.29.8", features = ["colors"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
nextcloud-config-parser = "0.14.1"
url = "2.5.4"
clap = { version = "4.5.43", features = ["derive"] }
sd-notify = { version = "0.4.5", optional = true }

[dev-dependencies]
mini-redis = "0.4.1"
tokio-tungstenite = "0.26.2"
http-auth-basic = "0.3.5"
test_client = { path = "test_client" }

[build-dependencies]
nextcloud_appinfo = "0.6.0"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = true

[workspace]

[features]
default = ["systemd"]
systemd = ["dep:sd-notify"]
