[package]
name = "test_client"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }
serde_json = "1.0.116"
ureq = "2.9.6"
flexi_logger = { version = "0.28.0", features = ["colors"] }
log = "0.4.21"
base64 = "0.22.0"
miette = { version = "7.2.0", features = ["fancy"] }
url = "2.5.0"
