# SPDX-FileCopyrightText: 2020 Nextcloud GmbH and Nextcloud contributors
# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "test_client"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
tungstenite = { version = "0.26.2", features = ["rustls-tls-webpki-roots", "url"] }
serde_json = "1.0.142"
ureq = "2.12.1"
flexi_logger = { version = "0.29.8", features = ["colors"] }
log = "0.4.27"
base64 = "0.22.1"
miette = { version = "7.6.0", features = ["fancy"] }
url = "2.5.4"
